syntax = "proto3";

import "ClassDef.proto";
package PB.client_lobby;

//请求进入大厅( 下发游戏列表 )
message Enter {
    enum MsgId { None=0; Id = 103000; }
    //大厅生成的token
    string token=1;
}


//请求进入游戏( 下发具体游戏的下一级的数据. 捕鱼下发 levels )
message EnterGame{
    enum MsgId { None=0; Id = 103001; }
    //游戏id
    int32 game_id=1;
}


//请求进入捕鱼游戏的某个级别( 将下发该级别下所有房间列表, 以及里面的玩家分布 )
message EnterGameCatchFishLevel{
    enum MsgId { None=0; Id = 103002; }
    //捕鱼游戏级别id
    int32 level_id=1;
}

//请求进捕鱼房并坐下( 此动作可能触发动态开房 ). 一般性失败错误码为 0, 即因为时间差, 当前位置上已经有人了.
message EnterGameCatchFishLevelRoomSit{
    enum MsgId { None=0; Id = 103004; }
    //捕鱼游戏房间id
    int32 room_id=1;
    //目标座位号( 0 ~ 3 ). 如果为 -1 表示自动选择
    int32 sit_index=2;
}

//返回上一级菜单"
message ReturnUp  {
    enum MsgId { None=0; Id = 103005; }
}

//修改昵称
message ChangeNickname{
    enum MsgId { None=0; Id = 103006; }
    //昵称
    string nickname=1;
}

//修改头像
message ChangeAvatar{
    enum MsgId { None=0; Id = 103007; }
    //头像
    int32 avatar_id=1;
}


//申请退款
message Refund{
    enum MsgId { None=0; Id = 103008; }
    //银行卡Id
    int32 id=1;
    //退款金额
    double money=2;
    //退款请求( 渠道, 账号等 )
    string requirement=3;
    //退款渠道(1=支付宝,2=银行卡)
    int32 pay_channel_id=4;
}


//获取玩家退款集合
message GetRefundList{
    enum MsgId { None=0; Id = 103009; }
}


//保险箱充值/取出.
message ChangeMoneySafe{
    enum MsgId { None=0; Id = 103010; }
    //账号id
    int32 account_id=1;
    //金额(>0充值，<0取出)
    double money=2;
}

//获取公告信息
message GetNotice{
    enum MsgId { None=0; Id = 103011; }
}

//联系客服
message Chat{
    enum MsgId { None=0; Id = 103012; }
    //内容
    string content=1;
    //图片url(多个图片用逗号分隔)
    string urls=2;
}

//更改公告/邮件阅读状态
message ChangeReadState{
    enum MsgId { None=0; Id = 103013; }
    //id
    int32 id=1;
    //1公告，2邮件
    int32 type=2;
}


//更改银行卡渠道信息
message ChangePayChannelBank{
    enum MsgId { None=0; Id = 103014; }
    //id
    int32 id=1;
    //银行卡开户人姓名
    string name=2;
    //银行卡卡号
    string card_number=3;
    //银行卡开户行
    string bank_name=4;
    //渠道Id
    int32 pay_channel_id=5;
    //ifsc 印度用 其他国家用空字符
    string ifsc=6;
}

//获取充值方式信息
message GetRecharge{
    enum MsgId { None=0; Id = 103015; }
}

//获取退款方式信息
message GetRefundInfo{
    enum MsgId { None=0; Id = 103016; }
}


//客户端发起充值请求
message ClientRechargeRequest{
    enum MsgId { None=0; Id = 103017; }
    //充值的金额
    double money=1;
    //充值的方式,1 支付宝，2 银行卡, 3 微信，10 谷歌支付
    int32 pay_type=2;
    //ip信息
    string ip_info=3;
    //是否生成订单(1=生成)
    int32 is_create_order=4;
    //付款人姓名
    string pay_name=5;
    //付款人卡号
    string pay_card_number=6;
    //上游订单号
    string upstream_order_num=7;
    //支付KEY,如果为空字符,那么由服务器随机生成
    string payment_key=8;
}


//玩家正常登出.
message LoginOut{
    enum MsgId { None=0; Id = 103018; }
}


//获取客户端发起充值后的结果信息
message GetClientRechargeResult{
    enum MsgId { None=0; Id = 103019; }
    //packageName
    string package_name=1;
    //productId
    string product_id=2;
    //token
    string token=3;
    //订单号
    string order_num=4;
}


//设置赠送密码
message ClientGiftPassword{
    enum MsgId { None=0; Id = 103020; }
    //密码
    string content=1;
}



//赠送金币
message ClientGiftMoney{
    enum MsgId { None=0; Id = 103021; }
    //获赠玩家id
    int32 account_id=1;
    //赠送金额
    double money=2;
    //密码
    string content=3;
}


//申请代理
message ClientApplyPromotion{
    enum MsgId { None=0; Id = 103022; }
    //代理名称
    string promotion_name=1;
}


//代理信息
message ClientPromotion{
    enum MsgId { None=0; Id = 103023; }
    //语言(1=中文;2=英文；3=缅文；4=马来文)
    int32 language=1;
}


//申请加入工会
message ClientBindPromotionCode{
    enum MsgId { None=0; Id = 103024; }
    //工会邀请码
    string promotion_code=1;
}


//验证facebook
message ClientVerificationFacebook{
    enum MsgId { None=0; Id = 103025; }
    //token
    string token=1;
}

//获取每日签到信息
message Get_SignInGaveInfo {
    enum MsgId { None=0; Id = 103026; }
}

//签到
message SignInToDay {
    enum MsgId { None=0; Id = 103027; }
}

//玩家赠送记录
message ClientGiftRecord{
    enum MsgId { None=0; Id = 103028; }
}

//客户端充值生成订单后，提交付款人信息
message ClientRechargeRequestPayerInfo{
    enum MsgId { None=0; Id = 103029; }
    //订单号
    string order_num=1;
    //付款人姓名
    string payer_name=2;
    //付款方式
    string payer_type=3;
    //付款人卡号
    string payer_card_number=4;
    //上游订单号
    string upstream_order_num=5;
}


//批量获取消息
message GetMessage{
    enum MsgId { None=0; Id = 103030; }
    //翻页起始位置 0=最新消息 时间倒序
    int32 limit_index=1;
    //数量起始位置往后拿多少
    int32 count=2;
    //account id
    int32 account_id=3;
    //用户名
    string username=4;
}


//发送消息
message SendMessage{
    enum MsgId { None=0; Id = 103031; }
    //内容
    string content=1;
    //图片上传后的图片名字
    string image=2;
    //account id
    int32 account_id=3;
    //用户名
    string username=4;
}


//设置消息为已读
message ReadMessage{
    enum MsgId { None=0; Id = 103032; }
    //消息Id
    double id=1;
}


//获取是否有未读消息
message GetUnreadMessage{
    enum MsgId { None=0; Id = 103033; }
}


//客服服务评分反馈
message CustomerEvaluate{
    enum MsgId { None=0; Id = 103034; }
    //批次
    string question_id=1;
    //评分
    int32 score=2;
    //评价
    string evaluate=3;
    //联系方式
    string contact=4;
}

//请求充值记录
message GetRechargeList{
    enum MsgId { None=0; Id = 103035; }
}


//设置登录账号和密码
message SetAccountNameAndPassword{
    enum MsgId { None=0; Id = 103036; }
    //登录账号
    string account_name=1;
    //登录密码
    string password=2;
}


//绑定玩家银行卡实名信息
message BandingRealNameBankInfo{
    enum MsgId { None=0; Id = 103037; }
    //银行名
    string bank_name=1;
    //真实姓名
    string payer_name=2;
    //卡号
    string payer_card_number=3;
}


//绑定玩家手机实名信息
message BandingRealNamePhoneInfo{
    enum MsgId { None=0; Id = 103038; }
    //真实姓名
    string payer_name=1;
    //手机号
    string phone=2;
}

//注册临时聊天服务
message RegisterTempMsgService{
    enum MsgId { None=0; Id = 103039; }
    //account id
    int32 account_id=1;
    //用户名
    string username=2;
}


//请求常见问题列表
message GetFAQ{
    enum MsgId { None=0; Id = 103040; }
}

//投诉
message NewComplaint{
    enum MsgId { None=0; Id = 103041; }
    //投诉内容
    string content=1;
    //投诉上传图片名 以;拆分
    string images=2;
    //玩家真实姓名
    string real_name=3;
    //玩家联系方式
    string phone=4;
}


//申请修改实名制信息
message ApplyFixRealName{
    enum MsgId { None=0; Id = 103042; }
    //银行名
    string bank_name=1;
    //真实姓名
    string payer_name=2;
    //卡号
    string payer_card_number=3;
    //手机号
    string phone=4;
}


//提交二维码
message UpQRCodeImage{
    enum MsgId { None=0; Id = 103043; }
    //二维码图片名
    string qr_image=1;
    //银行名
    string bank_name=2;
}


//获取支付码
message GetPaymentKey{
    enum MsgId { None=0; Id = 103044; }
}

//大厅PING"
message Ping{
    enum MsgId { None=0; Id = 105000; }
    int64 ticks=1;
}

//操作保险箱码值
message ChangeMoneyGiftSafe{
    enum MsgId { None=0; Id = 103046; }
    //账号id
    int32 account_id=1;
    //金额(>0充值，<0取出)
    double money=2;
}

//请求每日洗码赠送洗码活动信息
message RequestDailyWashCodeActivityInfo{
    enum MsgId { None=0; Id = 103047; }
}

//领取每日洗码赠送绑定金币
message GetDailyWashCode{
    enum MsgId { None=0; Id = 103048; }
}

//获取活动状态
message GetActivityInfo{
    enum MsgId { None=0; Id = 103049; }
}

//开始转转盘
message StartSpin{
    enum MsgId { None=0; Id = 103050; }
}

//获取游戏任务信息
message GetGameTotalActivityInfo{
    enum MsgId { None=0; Id = 103051; }
}

//领取任务
message GetTotalActivityAwards{
    enum MsgId { None=0; Id = 103052; }
    //任务id
    int32 activity_id=1;
}

//修改工会头像
message ModifyPromotionIcon{
    enum MsgId { None=0; Id = 103053; }
    //头像id
    int32 id=1;
}

//修改工会公告
message ModifyPromotionDesc{
    enum MsgId { None=0; Id = 103054; }
    //公告
    string description=1;
}

//退出工会
message QuitPromotion{
    enum MsgId { None=0; Id = 103055; }
}

//获取工会返利信息
message GetPromotionSettlementInfo{
    enum MsgId { None=0; Id = 103056; }
}

//领取返利
message ReceiveSettlement{
    enum MsgId { None=0; Id = 103057; }
}

//获取返利日记
message GetReceiveSettlementLog{
    enum MsgId { None=0; Id = 103058; }
}

//领取充值福利
message RequestWelfare{
    enum MsgId { None=0; Id = 103059; }
}

//查询苹果充值情况
message GetAppleRechargeResult{
    enum MsgId { None=0; Id = 103060; }
    //苹果充值返回凭据
    string receipt=1;
    //购买项目的id
    string product_id=2;
    //订单号
    string order_num=3;
}

//发送聊天消息给服务器
message RequestChatMessage{
    enum MsgId { None=0; Id = 103061; }
    //类型-1=公频 -2=工会 account id= 私聊
    int32 target_id=1;
    //内容
    string content=2;
}

//获取工会成员权限
message GetPromotionAuthority{
    enum MsgId { None=0; Id = 103062; }
    //账号id
    int32 account_id=1;
}

//设置工会成员权限
message SetPromotionAuthority{
    enum MsgId { None=0; Id = 103063; }
    //账号id
    int32 account_id=2;
    //权限 0=可以聊天 1=不能聊天
    int32 authority=3;
}

//获取离线私聊消息
message GetPrivateOffLineChatMessage{
    enum MsgId { None=0; Id = 103064; }
}

//获取商家群发玩家列表
message GetBusinessmanMassUsers{
    enum MsgId { None=0; Id = 103065; }
}

//发送群发消息
message SendMassMessage{
    enum MsgId { None=0; Id = 103066; }
    //群发的用户id
    repeated int32 user_ids=1;
    //内容
    string content=2;
}

//获取工会成员列表
message GetPromotionUsers{
    enum MsgId { None=0; Id = 103067; }
}

//获取公司网站
message GetWebsite{
    enum MsgId { None=0; Id = 103068; }
}

//获取正式注册赠送金额
message GetFormalRegisterMoney{
    enum MsgId { None=0; Id = 103069; }
}

//批量查询玩家信息
message GetChatPlayerInfo{
    enum MsgId { None=0; Id = 103070; }
    //账号id列表
    repeated int32 account_list=1;
}

//获取好友列表
message GetFriends{
    enum MsgId { None=0; Id = 103071; }
}

//获取聊天群信息
message GetChatGroups{
    enum MsgId { None=0; Id = 103072; }
}

//建立聊天群
message CreateChatGroup{
    enum MsgId { None=0; Id = 103073; }
    //群名称
    string name=1;
    //进入码
    string join_code=2;
}


//获取已加入聊天群具体信息
message GetChatGroupInfo{
    enum MsgId { None=0; Id = 103074; }
    //群id
    int64 group_id=1;
}


//获取群成员信息
message GetChatGroupMember{
    enum MsgId { None=0; Id = 103075; }
    //群id
    int64 group_id=1;
}


//管理员编辑群信息
message EditGroupInfo{
    enum MsgId { None=0; Id = 103076; }
    //群id
    int64 group_id=1;
    //群名称
    string name=2;
    //群公告
    string notice=3;
    //是否全局禁言 =1是 =0 否
    int32 global_muted=4;
    //邀请码 如果是空字符串 就是不需要
    string join_code=5;
}


//管理员操作
message GroupAdminMemberSet{
    enum MsgId { None=0; Id = 103077; }
    //群id
    int64 group_id=1;
    //操作的玩家id
    int32 account_id=2;
    //操作内容 1=禁言 2=设置管理员 3=T人
    int32 feature=3;
    //1=禁言 0=解除禁言; 1=设置管理员 0=解除管理员;0=T人
    int32 value=4;
}


//解散群
message DisbandGroup{
    enum MsgId { None=0; Id = 103078; }
    //群id
    int64 group_id=1;
}

//加入聊天群
message JoinChatGroup{
    enum MsgId { None=0; Id = 103079; }
    //群id
    int64 id=1;
    //加入码 没有就写空字符
    string join_code=2;
}

//发送群聊消息
message RequestChatGroupMessage{
    enum MsgId { None=0; Id = 103080; }
    //群id
    int64 id=1;
    //内容
    string content=2;
}

//退出聊天群
message QuitChatGroup{
    enum MsgId { None=0; Id = 103081; }
    //群id
    int64 id=1;
}

//添加好友
message AddFriend{
    enum MsgId { None=0; Id = 103082; }
    //对方账号id
    int32 target_id=1;
}

//删除好友
message DeleteFriend{
    enum MsgId { None=0; Id = 103083; }
    //对方账号id
    int32 target_id=1;
}

//验证google token
message ClientVerificationGoogle{
    enum MsgId { None=0; Id = 103084; }
    //token
    string token=1;
}

//验证google token
message ClientVerificationApple{
    enum MsgId { None=0; Id = 103085; }
    //token
    string token=1;
}

//获取聊天系统公告
message ClientGetChatNotice{
    enum MsgId { None=0; Id = 103086; }
}

//绑定虚拟币钱包地址
message BindVirtualCoinAddress{
    enum MsgId { None=0; Id = 103087; }
    //渠道id
    int32 pay_channel_id=1;
    //虚拟币地址
    string virtual_coin_address=2;
}

//获取洗码返利活动信息
message GetWashCodeActivityInfo{
    enum MsgId { None=0; Id = 103088; }
    //活动id
    int32 activity_id=1;
}

//领取洗码奖励
message ReceiveWashcodeActivity{
    enum MsgId { None=0; Id = 103089; }
    //活动id
    int32 activity_id=1;
}

//获取当前玩家详细信息
message GetPlayerInfo{
    enum MsgId { None=0; Id = 103090; }
}

//获取当前银商私聊按钮状态
message  GetBusinessmanPrivateMsgButtons{
    enum MsgId { None=0; Id = 103091; }
}

//获取公共频道聊天记录 每分页 最大30条
message GetPublicMessages{
    enum MsgId { None=0; Id = 103092; }
    // 公屏0 其他数组为群 id
    int64 channel_id=1;
    //分页 公式为 limit {page}*30,30
    uint32 page=2;
}

//获取私聊聊天记录 每分页 最大30条
message GetPrivateMessages{
    enum MsgId { None=0; Id = 103093; }
    //对方的账号 id
    int32 target_id=1;
    //分页 公式为 limit {page}*30,30
    uint32 page=2;
}


//测试账号请求旋转转盘
message StartSpinExperience{
    enum MsgId { None=0; Id = 103094; }
}

//领取救济金
message GiveReliefMoney{
    enum MsgId { None=0; Id = 103095; }
}

//发送手机号验证码
message SendPhoneVerificationCode{
    enum MsgId { None=0; Id = 103096; }
    //手机号
    string phone_number=1;
}

//绑定手机号
message BindPhoneNumber{
    enum MsgId { None=0; Id = 103097; }
    //验证码
    string code=1;
}

//发送邮箱验证码
message SendEmailVerificationCode{
    enum MsgId { None=0; Id = 103098; }
    //email
    string email=1;
}

//绑定邮箱
message BindEMailNumber{
    enum MsgId { None=0; Id = 103099; }
    //验证码
    string code=1;
}

//获取砍一刀存档
message GetAssistanceStore{
    enum MsgId { None=0; Id = 103100; }
}

//存储砍一刀存档
message SaveAssistanceStore{
    enum MsgId { None=0; Id = 103101; }
    // 存档信息
    string context=1;
}

//获取砍一刀信息
message GetAssistanceInfo{
    enum MsgId { None=0; Id = 103102; }
    // 活动id
    int32 activity_id=1;
}

//砍一刀助力
message AssistanceToUser{
    enum MsgId { None=0; Id = 103103; }
    //对方id
    int32 target_id=1;
    //活动id
    int32 activity_id=2;
}

//提交审核 如果返回ERROR:活动没开,人数不够,重复提交
message RequestActivityAssistanceExamine{
    enum MsgId { None=0; Id = 103104; }
    //活动id
    int32 activity_id=1;
}

//绑定人脸识别
message BindFace{
    enum MsgId { None=0; Id = 103110; }
    //特征
    string code=1;
}

//绑定无限代理上级id
message BindAgentSuperiorId{
    enum MsgId { None=0; Id = 103111; }
    //对方id
        int32 account_id=1;
}

//获取代理信息
message GetAgentInfo{
    enum MsgId { None=0; Id = 103112; }
}

//获取每日代理收益详情
message GetAgentDateInfo{
    enum MsgId { None=0; Id = 103113; }
    //开始时间
    string start_time=1;
    //结束时间
    string end_time=2;
    //代理级别
    int32 level=3;
    //页 每页20条
        int32 page=4;
}
// 领取佣金
message ReceiveAgentRebate{
    enum MsgId { None=0; Id = 103114; }
}

// 查看推荐详情
message GetAgentRecommendInfo{
    enum MsgId { None=0; Id = 103115; }
}

// 查看推荐用户信息
message GetAgentRecommendPlayers{
    enum MsgId { None=0; Id = 103116; }
}


// 领取自己的奖励(自己是别人的一级代理,并且30天内达到要求者)
message ReceiveAgentRecommendRewardMy{
    enum MsgId { None=0; Id = 103117; }
}

// 领取一级代理的奖励(别人是自己的一级代理,并且30天内达到要求者)
message ReceiveAgentRecommendRewardTarget{
    enum MsgId { None=0; Id = 103118; }
}

//领取推荐的一级代理一次性满额充值奖励
message ReceiveAgentRecommendOnceRechargeReward{
    enum MsgId { None=0; Id = 103119; }
}

//获取代理统计信息
message GetAgentStatisticsInfo{
    enum MsgId { None=0; Id = 103120; }
    //开始时间
    string start_time=1;
    //结束时间
    string end_time=2;
    //代理级别
    int32 level=3;
}

// 领取绑定账号奖励
message ReceiveBindAccountReward{
    enum MsgId { None=0; Id = 103121; }
}